hard-gists/2705927/run.log
=== Docker Run Log for 2705927 ===
Started at: Mi 29. Okt 13:11:56 CET 2025

[2025-10-29 13:11:56] START: Running container for 2705927
[2025-10-29 13:11:56] SUCCESS: Container b983bfb24d927a125704ce07dd59021ed64a806f82b78bc037c73d6c8f206fc4 started for 2705927
=== Container logs for 2705927 ===
  File "/snippet.py", line 133
    print "Error: Data element not found in response."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2705927 ===
[2025-10-29 13:11:58] INFO: Container b983bfb24d927a125704ce07dd59021ed64a806f82b78bc037c73d6c8f206fc4 has stopped
